--- a/html/music.html
+++ b/html/music.html
@@ -44,7 +44,7 @@
   
         <div class="audiocard">
           <div class="imgbox">
-            <img src="../img/music_card_img2.jpg" alt="">
+            <img src="../img/audio_img_2.png" alt="">
           </div>
         <audio controls>
           <source src="../audio/Yiruma-Kiss_the_Rain.mp3" type="audio/mp3">
@@ -53,7 +53,7 @@
   
         <div class="audiocard">
           <div class="imgbox">
-            <img src="../img/music_card_img3.jpg" alt="">
+            <img src="../img/audio_img_1.png" alt="">
           </div>
         <audio controls>
           <source src="../audio/Yiruma-May_Be.mp3" type="audio/mp3">
@@ -62,7 +62,79 @@
   
         <div class="audiocard">
           <div class="imgbox">
-            <img src="../img/music_card_img4.jpg" alt="">
+            <img src="../img/audio_img_6_edited.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_3.png" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_4_edited.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_iicsya.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_ft.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_wtlf1.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_ind.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_bily.jpg" alt="">
+          </div>
+        <audio controls>
+          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+        </audio>
+        </div>
+
+        <div class="audiocard">
+          <div class="imgbox">
+            <img src="../img/audio_img_lm.jpg" alt="">
           </div>
         <audio controls>
           <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
