--- a/html/music.html
+++ b/html/music.html
@@ -74,7 +74,7 @@
             <img src="../img/audio_img_3.png" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Do You.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -83,7 +83,7 @@
             <img src="../img/audio_img_4_edited.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Chaconne.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -92,7 +92,7 @@
             <img src="../img/audio_img_iicsya.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-If I Could See You Again.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -101,7 +101,7 @@
             <img src="../img/audio_img_ft.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Fairy Tale.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -110,7 +110,7 @@
             <img src="../img/audio_img_wtlf1.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-When the Love Falls.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -119,7 +119,7 @@
             <img src="../img/audio_img_ind.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Indigo.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -128,7 +128,7 @@
             <img src="../img/audio_img_bily.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Because I Love You.mp3" type="audio/mp3">
         </audio>
         </div>
 
@@ -137,7 +137,7 @@
             <img src="../img/audio_img_lm.jpg" alt="">
           </div>
         <audio controls>
-          <source src="../audio/Yiruma-Reminiscent.mp3" type="audio/mp3">
+          <source src="../audio/Yiruma-Love_Me.mp3" type="audio/mp3">
         </audio>
         </div>
   
